= Changelog

== HEAD

Features:

* McBean.markdown now sensibly returns a McBean instance, instead of a Markdownify::Antidote instance.
* McBean#to_html now does the right thing when the instance is created via McBean.markdown.
* McBean#to_html now entity-escapes unsafe and invalid HTML tags (thanks to Loofah).

Deprecations:

* McBean.new and .allocate are now private. Use one of the constructors: .fragment, .document or .markdown.

== 0.2.0 (2010-03-24)

* Converts Markdown to HTML (thanks to RDiscount). GH #2.
* <br> elements are converted into newlines (markdown). GH #5
* <a> elements without an 'href' attribute are not rendered as hyperlinks (markdown). GH #4

== 0.1.2 (2010-03-10)

* Command line utility "mcbean"
* Demo site on Heroku

== 0.1.1 (2010-03-09)

* Better hyperlink handling

== 0.1.0 (2010-03-09)

* Happy Birthday!
* Converts HTML documents to Markdown.