@@ -4,30 +4,35 @@ class McBean
   VERSION = "0.2.0"
   REQUIRED_LOOFAH_VERSION = "0.4.7"
 
-  attr_accessor :html
+  attr_writer :__html__
 
   private_class_method :new, :allocate
 
   def McBean.fragment(string_or_io)
-    mcbean = allocate
-    mcbean.html = Loofah.fragment(string_or_io)
+    mcbean = new
+    mcbean.__html__ = Loofah.fragment(string_or_io)
     mcbean
   end
 
   def McBean.document(string_or_io)
-    mcbean = allocate
-    mcbean.html = Loofah.document(string_or_io)
+    mcbean = new
+    mcbean.__html__ = Loofah.document(string_or_io)
     mcbean
   end
 
   def to_html
-    return html.scrub!(:escape).to_html if html
+    __html__.dup.scrub!(:escape).to_html
+  end
 
-    # TODO markdown should not be hardcoded here. class variable modified by markdown.rb?
-    if markdown
-      self.html = Loofah.document(markdown.to_html)
-      return to_html
+  def __html__ # :nodoc:
+    @__html__ ||= nil
+    unless @__html__
+      # TODO markdown should not be hardcoded here. class variable modified by markdown.rb?
+      if __markdown__
+        @__html__ = Loofah.document(__markdown__.to_html)
+      end
     end
+    @__html__
   end
 end
 Mcbean = McBean
